# RegulaFaceDetector

./: CMakeLists.txt  main.cpp
face_detector_lib/: library.cpp  library.h
face_detector_lib/common/: common.h
face_detector_lib/face_detector/: face_detector.cpp  face_detector.h  net_face_detector.cpp  net_face_detector.h
face_detector_lib/file_searcher/: abstract_searcher.cpp  abstract_searcher.h  file_searcher.cpp  file_searcher.h  jpeg_file_searcher.cpp  jpeg_file_searcher.h  jpg_file_searcher.cpp  jpg_file_searcher.h  png_file_searcher.cpp  png_file_searcher.h
face_detector_lib/result_generator/: json_result_generator.cpp  json_result_generator.h  result_generator.cpp  result_generator.h
face_detector_lib/tests/: tests.cpp
